--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@norce/custom-module-flattered-cart",
   "private": false,
-  "version": "0.0.6",
+  "version": "0.0.7",
   "type": "module",
   "main": "dist/main.js",
   "scripts": {
@@ -13,7 +13,8 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
-    "@norce/checkout-lib": "0.1.0-pre.4",
+    "@norce/checkout-lib": "0.1.0-pre.6",
+    "@norce/module-adapter-svelte": "1.1.0-pre.11",
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
     "@tsconfig/svelte": "^3.0.0",
     "autoprefixer": "^10.4.13",
@@ -30,8 +31,5 @@
     "type-fest": "^3.5.4",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
-  },
-  "dependencies": {
-    "@norce/module-adapter-svelte": "1.1.0-pre.7"
   }
 }
