--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@norce/custom-module-flattered-cart",
   "private": false,
-  "version": "0.0.8",
+  "version": "0.1.0",
   "type": "module",
   "main": "dist/main.js",
   "scripts": {
@@ -13,8 +13,9 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
-    "@norce/checkout-lib": "0.1.0-pre.9",
-    "@norce/module-adapter-svelte": "1.1.0-pre.14",
+    "@norce/analytics": "^1.3.7",
+    "@norce/checkout-lib": "0.1.0-pre.11",
+    "@norce/module-adapter-svelte": "1.1.0-pre.17",
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
     "@tsconfig/svelte": "^3.0.0",
     "autoprefixer": "^10.4.13",
@@ -22,6 +23,7 @@
     "concurrently": "^7.5.0",
     "http-server": "^14.1.1",
     "postcss": "^8.4.19",
+    "request-ip": "^3.3.x",
     "rollup-plugin-livereload": "^2.0.5",
     "svelte": "^3.52.0",
     "svelte-check": "^2.9.2",
@@ -30,6 +32,8 @@
     "tslib": "^2.4.0",
     "type-fest": "^3.6.1",
     "typescript": "^4.9.5",
+    "universal-cookie": "^4.x.x",
+    "uuid": "^8.x.x",
     "vite": "^3.2.3"
   }
 }
